style.css
/* ... */
/* Article */

.post {
  margin-top: -40vh;
  background: var(--creme);
  border-radius: 10px;
  padding: 65px 130px;
  z-index: 5;

  text-align: center;
}

.post.page {
  margin: 100px auto;
}

.no-comments {
  height: 100px;
}

.post-heading {
  margin: auto;
  width: 800px;
  margin-bottom: 25px;

  text-align: left;
}

.post p {
  margin: auto;
  width: 800px;

  text-align: left;
}

.post p.intro {
  font-style: italic;
  color: #67605e;
  font-weight: 500;
  line-height: 1.8em;
  font-size: 1.1em;
}

.post figure {
  margin: 15px auto;
}

.post figure table {
  text-align: left;
  margin: auto;
}

.post figure table thead th {
  padding: 10px 0;
  text-align: center;
}

.post figure table tbody tr:nth-of-type(odd) {
  background: rgba(255, 255, 255, 0.5);
}

.post figure table td {
  padding: 10px 15px;
  color: var(--brand-black);
}

.post figure table thead tr th {
  background: var(--light-red);
}

.post figure table strong {
  color: var(--brand-black);
}

.post figure table thead tr th:nth-last-child(1) {
  border-radius: 0 10px 0 0;
  overflow: hidden;
}

.post figure table thead tr th:nth-child(1) {
  border-radius: 10px 0 0 0;
  overflow: hidden;
}

/* Comment Section */

.comments {
  padding-top: 200px;
  margin-top: -160px;
  z-index: -1;
  text-align: center;
  position: relative;
}

.comment-info,
.comments-notes {
  font-size: 20px;
}

.first-level-comment-list,
.first-level-comment-list ul {
  list-style: none;
}

.comment-body {
  display: grid;
  grid-template-columns: repeat(2, auto);
  grid-template-rows: repeat(4, auto);
  grid-column-gap: 0px;
  grid-row-gap: 0px;

  padding: 30px 45px;
  background: none;
}

.children .comment-body {
  grid-template-rows: repeat(3, auto);
}

.children .comment-body .reply {
  display: none;
}

.depth-1>.comment-body {
  background: var(--creme);
  border-radius: 10px;
  margin-bottom: 60px;
}

.parent>.comment-body {
  margin-bottom: 20px;
}

.depth-1>ol {
  margin-left: 150px;
  list-style: none;

  border-radius: 10px;
  background: rgb(230, 220, 217);
  /* var(--creme) */
  background: linear-gradient(180deg, rgba(230, 220, 217, .3) 0%, rgba(230, 220, 217, 0) 100%);
}

.depth-2>.comment-body {

  border-radius: 10px;
  margin-bottom: 20px;
}

.comment-author {
  grid-area: 1 / 1 / 2 / 2;

  display: flex;
  flex-direction: row;
  align-items: center;

  padding: 20px 0;
}

.comment-author img {
  margin-right: 20px;
  border-radius: 10px;
}

.comment-author-name {
  display: block;
  font-size: 25px;
  font-weight: 700;
  font-family: "open-sans", sans-serif;
  font-style: normal;
}

.comment-meta {
  grid-area: 1 / 2 / 2 / 3;

  display: flex;
  flex-direction: row-reverse;
  align-items: center;
}

.comment-awaiting-moderation {
  grid-area: 2 / 1 / 3 / 3;

  padding: 0;
  margin: 0;

  font-style: italic;
}

.comment-content {
  grid-area: 3 / 1 / 4 / 3;
  text-align: left;
  margin-top: 20px;
}

.reply {
  grid-area: 4 / 1 / 5 / 2;

  display: block;

  background: var(--brand-black);
  padding: 10px 20px;
  color: white;
  font-size: 20px;
  font-weight: 700;
  border: 4px solid var(--brand-black);
  border-radius: 10px;
  margin: 20px 0;

  width: 50%;
}

.reply a {
  color: white;
  text-decoration: none;
}

.reply:hover {
  border: 4px solid white;
}

.reply i:before {
  color: white;
  padding-left: 10px;
  font-size: 20px;
}



.comment-list>div {
  margin-top: 50px;
}

.comment-list>div .fas.fa-chevron-left:before {
  padding: 0 10px 0 0;
}

.comment-pagination {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.comment-pagination a {
  background: var(--brand-black);
  padding: 10px 20px;
  color: white;
  font-size: 20px;
  font-weight: 700;
  border: 4px solid var(--brand-black);
  border-radius: 10px;
  margin: 20px;

  display: block;
  text-decoration: none;
  width: 30%;
}

.comment-pagination a:hover {
  border: 4px solid white;
}

/* ------------------------------------------------------
CONTACT FORM
------------------------------------------------------ */

.contact {
  text-align: center;

  display: flex;
  flex-direction: column;
  align-items: center;
}

.contact>p {
  width: 750px;
  text-align: left;
}

.contact>p>a {
  font-weight: 700;
}

.social-media {
  margin: auto;

  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

.social-media-channels {
  display: grid;
  grid-template-columns: repeat(4, 57px);
  grid-template-rows: 57px;
  grid-column-gap: 40px;
  grid-row-gap: 40px;
}

.social-media-channels button {
  width: 100%;
  height: 100%;

  display: flex;
  justify-content: center;
  align-items: center;

  margin: 0;
  padding: 0;
}

.social-media-channels button i {
  display: inline-block;
  width: 20px;
}

.social-media-channels button i:before {
  padding: 0;
}

.social-media-channels .twitter {
  grid-area: 1 / 1 / 2 / 2;
}

.social-media-channels .behance {
  grid-area: 1 / 2 / 2 / 3;
}

.social-media-channels .github {
  grid-area: 1 / 3 / 2 / 4;
}

.social-media-channels .reddit {
  grid-area: 1 / 4 / 2 / 5;
}

.contact-social a {
  display: inline-block;
  width: 80px;
  height: 80px;
  margin: 0 20px;
}

.contact-social .primary {
  padding: 2px;
  width: 80px;
  height: 80px;
  margin: 0;
  pointer-events: inherit;
}

.contact-social button.primary i:before {
  font-size: 50px;
  color: var(--light-red);
  padding: 0;
}

/* ------------------------------------------------------
FOOTER NAVIGATION
------------------------------------------------------ */

footer {
  padding: 65px 0 30px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;

  border-top: 1px solid var(--tinted-black);
}

.footer-content {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: 1fr;
  grid-column-gap: 20px;
  grid-row-gap: 0px;
  margin-bottom: 60px;
}
/* ... */

